# deepseek-ocr-cli

./: .env.example  .gitignore  AGENT_PROMPT.md  LICENSE  PUBLISH_GUIDE.md  README.md  TODO.md  pyproject.toml
deepseek_ocr/: __init__.py  __main__.py  cli.py  config.py  metadata.py  model.py  processor.py  utils.py
deepseek_ocr/backends/: __init__.py  base.py  ollama.py  vllm.py
examples/: basic_usage.py  batch_processing.py  figure_analysis.py
tests/: __init__.py  test_cli.py  test_config.py  test_metadata.py  test_retry.py  test_utils.py
